solve menubar covers the main page.

--- a/dashboard/static/dashboard/css/design.css
+++ b/dashboard/static/dashboard/css/design.css
@@ -421,6 +421,6 @@
     }
 
 .container_dash{
-    padding-right: 200px;
-    padding-left: 15px;
+    padding-right: 10%;
+    padding-left: 350px;
 }
